# aevum-engine

./: CHANGED_FILES_V0.3.16.txt  CHANGED_FILES_V0.3.17.txt  CHANGED_FILES_V0.3.18.txt  CHANGED_FILES_V0.3.19.txt  CHANGED_FILES_V0.3.20.txt  CHANGED_FILES_V0.3.21.txt  CHANGED_FILES_V0.3.22.txt  CHANGED_FILES_V0.3.23.txt  CHANGED_FILES_V0.3.24.txt  CHANGED_FILES_V0.3.25.txt  CHANGED_FILES_V0.3.26.txt  CHANGED_FILES_V0.3.27.txt  CHANGED_FILES_V0.3.28.txt  CHANGED_FILES_V0.3.29.txt  CHANGED_FILES_V0.3.30.txt  CHANGED_FILES_V0.3.31.txt  CHANGED_FILES_V0.3.32.txt  CHANGED_FILES_V0.3.33.txt  CHANGED_FILES_V0.3.34.txt  CHANGED_FILES_V0.3.35.txt  CHANGED_FILES_V0.3.36.txt  CHANGED_FILES_V0.3.37.txt  CHANGED_FILES_V0.3.43.txt  CHANGED_FILES_V0.3.47.txt  CHANGED_FILES_V0.3.48.txt  CHANGED_FILES_V0.3.49.txt  CHANGED_FILES_V0.3.50.txt  CHANGED_FILES_V0.3.51.txt  CHANGED_FILES_V0.3.52.txt  CHANGED_FILES_V0.3.53.txt  CMakeLists.txt  GITHUB_RELEASE_GUIDE.md  HOTFIX_V0.3.43_TO_V0.3.44.md  HOTFIX_V0.3.44_TO_V0.3.45.md  HOTFIX_V0.3.45_TO_V0.3.46.md  HOTFIX_V0.3.46_TO_V0.3.47.md  HOTFIX_V0.3.47_TO_V0.3.48.md  HOTFIX_V0.3.48_TO_V0.3.49.md  HOTFIX_V0.3.49_TO_V0.3.50.md  HOTFIX_V0.3.50_TO_V0.3.51.md  (+55 more)
examples/: example_common.h  fft_plans.cpp  power_chain.cpp  register_ops.cpp
scripts/: build_native_pfa.sh  build_native_pfa_ubuntu.sh  install_ubuntu_dependencies.sh  test_native_pfa_gpu.sh  test_pfa9_lead_bridge_ubuntu.sh  test_pow2_type4_lead_cache_ubuntu.sh  test_type4_pfa9_ubuntu.sh
src/: Args.cpp  Background.h  CMakeLists.txt  EngineApi.cpp  EngineApi.h  FFTConfig.cpp  FFTConfig.h  Gpu.h  (+15 more)
(+71 files in other folders)
